[package]
name = "ruthless"
version = "0.1.0"
authors = ["Agustin Chiappe Berrini <agustin@auvik.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
dirs = "1.0.5"
failure = "0.1.5"
nix = "0.13.0"
ring = "0.14.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tempdir = "0.3"
uuid = { version = "0.7", features = ["v4"] }
